--- a/projeto1.ipynb
+++ b/projeto1.ipynb
@@ -53,7 +53,7 @@
         "import google.generativeai as genai\n",
         "\n",
         "\n",
-        "GOOGLE_API_KEY=\"AIzaSyDkNjO1UYlvpaAB_uWwJk0iZW9pg9tlZ8o\"\n",
+        "GOOGLE_API_KEY=\"\"\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ],
       "metadata": {
