--- a/projeto1.ipynb
+++ b/projeto1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlnsrSb/oRVJGlscLV1dhk",
+      "authorship_tag": "ABX9TyPKkWEYmODuCn2xhD6e5osY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,8 @@
       "source": [
         "# Import the Python SDK\n",
         "import google.generativeai as genai\n",
-        "\n",
+        "from google.colab import userdata\n",
+        "API_KEY = userdata.get('SECRET_KEY')\n",
         "\n",
         "GOOGLE_API_KEY=\"\"\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
